<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>me.asu</groupId>
    <artifactId>asu-http</artifactId>
    <version>2.1-SNAPSHOT</version>
    <packaging>pom</packaging>
    <modules>
        <module>asu-http-core</module>
        <module>asu-http-server</module>
    </modules>
    <properties>
        <!-- MAVEN 配置 -->
        <maven.compiler.release>25</maven.compiler.release>
        <maven.test.skip>false</maven.test.skip>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <lombok.version>1.18.36</lombok.version>
        <slf4j.version>1.7.25</slf4j.version>
        <junit.version>4.13.1</junit.version>
    </properties>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
                <scope>provided</scope>
            </dependency>

            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>${junit.version}</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <!-- lombok -->
            <plugin>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok-maven-plugin</artifactId>
                <version>1.18.20.0</version>
                <configuration>
                    <encoding>utf-8</encoding>
                </configuration>
                <executions>
                    <execution>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>delombok</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <!-- compiler -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <release>${maven.compiler.release}</release>
                    <encoding>${project.build.sourceEncoding}</encoding>
                    <proc>none</proc>
                    <compilerArgs>
                        <arg>-parameters</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <!-- jar -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>2.6</version>
                <configuration>
                    <archive>
                        <manifest>
                            <addDefaultImplementationEntries>false</addDefaultImplementationEntries>
                            <addDefaultSpecificationEntries>false</addDefaultSpecificationEntries>
                            <addClasspath>true</addClasspath>
                            <classpathPrefix>lib/</classpathPrefix>
                            <!--<mainClass>com.xxg.Main</mainClass>-->
                        </manifest>
                        <manifestEntries>
                            <Specification-Title>${project.artifactId}</Specification-Title>
                            <Specification-Version>${project.version}</Specification-Version>
                            <Implementation-Title>${project.name}</Implementation-Title>
                            <Implementation-Version>${project.version}</Implementation-Version>
                            <Built-By>Base Platform Team</Built-By>
                        </manifestEntries>
                    </archive>
                    <!-- 由具体的项目自己指定 -->
                    <!--<excludes>-->
                    <!--<exclude>**/*.properties</exclude>-->
                    <!--<exclude>**/*.xml</exclude>-->
                    <!--<exclude>**/*.json</exclude>-->
                    <!--<exclude>**/*.groovy</exclude>-->
                    <!--<exclude>**/*.py</exclude>-->
                    <!--<exclude>**/*.jar</exclude>-->
                    <!--</excludes>-->
                </configuration>
            </plugin>
            <!-- source -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.0.0</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <phase>install</phase>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <!-- surefire -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.2.5</version>
                <configuration>
                    <skip>${maven.test.skip}</skip>
                </configuration>
            </plugin>
            <!--            <plugin>-->
            <!--                <groupId>org.apache.maven.plugins</groupId>-->
            <!--                <artifactId>maven-assembly-plugin</artifactId>-->
            <!--                <configuration>-->
            <!--                    <archive>-->
            <!--                        <manifest>-->
            <!--                            <mainClass></mainClass>-->
            <!--                        </manifest>-->
            <!--                    </archive>-->
            <!--                    <descriptorRefs>-->
            <!--                        <descriptorRef>jar-with-dependencies</descriptorRef>-->
            <!--                    </descriptorRefs>-->
            <!--                </configuration>-->
            <!--                <executions>-->
            <!--                    <execution>-->
            <!--                        <id>make-assembly</id>-->
            <!--                        <phase>package</phase>-->
            <!--                        <goals>-->
            <!--                            <goal>single</goal>-->
            <!--                        </goals>-->
            <!--                    </execution>-->
            <!--                </executions>-->
            <!--            </plugin>-->

            <!--                <plugin>-->
            <!--                    <groupId>org.apache.maven.plugins</groupId>-->
            <!--                    <artifactId>maven-shade-plugin</artifactId>-->
            <!--                    <executions>-->
            <!--                        <execution>-->
            <!--                            <phase>package</phase>-->
            <!--                            <goals>-->
            <!--                                <goal>shade</goal>-->
            <!--                            </goals>-->
            <!--                            <configuration>-->
            <!--                                <transformers>-->
            <!--                                    <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">-->
            <!--                                        <mainClass>com.xxg.Main</mainClass>-->
            <!--                                    </transformer>-->
            <!--                                    <transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">-->
            <!--                                        <resource>META-INF/spring.handlers</resource>-->
            <!--                                    </transformer>-->
            <!--                                    <transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">-->
            <!--                                        <resource>META-INF/spring.schemas</resource>-->
            <!--                                    </transformer>-->
            <!--                                </transformers>-->
            <!--                            </configuration>-->
            <!--                        </execution>-->
            <!--                    </executions>-->
            <!--                </plugin>-->

        </plugins>
    </build>

</project>
